<resources>
    <string name="app_name">Astro 5 Star</string>
    <string name="login_title">Login</string>
    <string name="enter_phone">Enter Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_title">Verify OTP</string>
    <string name="enter_otp">Enter 4-digit OTP</string>
    <string name="verify">Verify</string>
    <string name="error_phone">Invalid Phone</string>
    <string name="error_otp">Invalid OTP</string>
    
    <!-- Dashboard -->
    <string name="available_balance">Available Wallet Balance</string>
    <string name="add_money">Add Money</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="refresh">Refresh</string>
    <string name="pending">Pending</string>
    
    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_dash">Dash</string>
    <string name="nav_call">Call</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>
</resources>
